test/spec/f32.txt
;;; SLOW:
;;; TOOL: run-interp-spec
;;; STDIN_FILE: third_party/testsuite/f32.wast
(;; STDOUT ;;;
out/test/spec/f32.wast:2523: assert_invalid passed:
  out/test/spec/f32/f32.1.wasm:0000024: error: type mismatch in f32.add, expected [f32, f32] but got [i64, f64]
  0000024: error: OnBinaryExpr callback failed
out/test/spec/f32.wast:2524: assert_invalid passed:
  out/test/spec/f32/f32.2.wasm:0000024: error: type mismatch in f32.div, expected [f32, f32] but got [i64, f64]
  0000024: error: OnBinaryExpr callback failed
out/test/spec/f32.wast:2525: assert_invalid passed:
  out/test/spec/f32/f32.3.wasm:0000024: error: type mismatch in f32.max, expected [f32, f32] but got [i64, f64]
  0000024: error: OnBinaryExpr callback failed
out/test/spec/f32.wast:2526: assert_invalid passed:
  out/test/spec/f32/f32.4.wasm:0000024: error: type mismatch in f32.min, expected [f32, f32] but got [i64, f64]
  0000024: error: OnBinaryExpr callback failed
out/test/spec/f32.wast:2527: assert_invalid passed:
  out/test/spec/f32/f32.5.wasm:0000024: error: type mismatch in f32.mul, expected [f32, f32] but got [i64, f64]
  0000024: error: OnBinaryExpr callback failed
out/test/spec/f32.wast:2528: assert_invalid passed:
  out/test/spec/f32/f32.6.wasm:0000024: error: type mismatch in f32.sub, expected [f32, f32] but got [i64, f64]
  0000024: error: OnBinaryExpr callback failed
out/test/spec/f32.wast:2529: assert_invalid passed:
  out/test/spec/f32/f32.7.wasm:000001b: error: type mismatch in f32.ceil, expected [f32] but got [i64]
  000001b: error: OnUnaryExpr callback failed
out/test/spec/f32.wast:2530: assert_invalid passed:
  out/test/spec/f32/f32.8.wasm:000001b: error: type mismatch in f32.floor, expected [f32] but got [i64]
  000001b: error: OnUnaryExpr callback failed
out/test/spec/f32.wast:2531: assert_invalid passed:
  out/test/spec/f32/f32.9.wasm:000001b: error: type mismatch in f32.nearest, expected [f32] but got [i64]
  000001b: error: OnUnaryExpr callback failed
out/test/spec/f32.wast:2532: assert_invalid passed:
  out/test/spec/f32/f32.10.wasm:000001b: error: type mismatch in f32.sqrt, expected [f32] but got [i64]
  000001b: error: OnUnaryExpr callback failed
out/test/spec/f32.wast:2533: assert_invalid passed:
  out/test/spec/f32/f32.11.wasm:000001b: error: type mismatch in f32.trunc, expected [f32] but got [i64]
  000001b: error: OnUnaryExpr callback failed
out/test/spec/f32.wast:2537: assert_malformed passed:
  out/test/spec/f32/f32.12.wat:1:31: error: invalid literal "nan:arithmetic"
  (func (result f32) (f32.const nan:arithmetic))
                                ^^^^^^^^^^^^^^
out/test/spec/f32.wast:2541: assert_malformed passed:
  out/test/spec/f32/f32.13.wat:1:31: error: invalid literal "nan:canonical"
  (func (result f32) (f32.const nan:canonical))
                                ^^^^^^^^^^^^^
2513/2513 tests passed.
;;; STDOUT ;;)
